Interface para salvar e importar dados
Implementação da versão rústica do salvamento dos dados (manual)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
     <div id="divCores"></div>
     <div id="divCoresCompletas">Lista de cores completas: </div>
+    <div id="divDados">
+        <button onclick="importar()">Importar</button>
+        <button onclick="exportar()">Exportar</button>
+        <div>
+            <textarea name="" id="txtDados" cols="80" rows="20"></textarea>
+        </div>
+    </div>
     
     <div id="divTeste"></div>
 
