--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <div id="divContainer">
         <div>
-            <span>[</span><input type="text" id="inpCor"><span>:</span>
-            <input type="text" id="inpReg"><span>]</span>
+            <span>[</span><input type="number" id="inpCor" ><span>:</span>
+            <input type="number" id="inpReg"><span>]</span>
         </div>
         <div id="divAlarmes">
             <div id="divResultado" class="divResultado"></div>
             <div id="divCorCompleta" class="divResultado">Cor completa</div>
             <div id="divFechou5" class="divResultado">Fechou 5</div>
+            <div id="divFechouTodos" class="divResultado">Fechou todos</div>
         </div>
         
     </div>
